# cb-events

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt  zensical.toml
.github/: copilot-instructions.md  renovate.json
.github/scripts/: verify_upstream.sh
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  docs-pages.yml  docs.yml  release.yml  update-license-year.yml  verify_upstream.sh
.github/workflows/legacy/: cd.yml  ci.yml
docs/: changelog.rst  conf.py  configuration.md  configuration.rst  error_handling.md  error_handling.rst  event_models.md  event_models.rst  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst
docs/api/: cb_events.md  client.md  config.md  exceptions.md  index.md  models.md  router.md
examples/: event_handling.py  example.py  tip_activated_lights.py
examples/docker/: Dockerfile  README.md
src/cb_events/: __init__.py  _client.py  _compat.py  _config.py  _exceptions.py  _models.py  _parser.py  _parsing.py  _request.py  _router.py  _utils.py  client.py  config.py  constants.py  exceptions.py  models.py  router.py  version.py
src/chaturbate_events/: client.py  router.py
tests/: conftest.py  helpers.py  test_chaturbate_events.py  test_client.py  test_config.py  test_e2e.py  test_exceptions.py  test_integration.py  test_models.py  test_retry.py  test_router.py
tests/client/: test_client.py  test_client_internal.py  test_client_utils.py  test_concurrency.py  test_config.py  test_configuration.py  test_core_client.py  test_initialization.py  test_polling.py  test_polling_concurrency.py  test_polling_errors.py  test_polling_next_url.py  test_polling_success.py  test_request_retry.py
tests/e2e/: test_e2e.py  test_integration.py
tests/exceptions/: test_exceptions.py
tests/models/: test_models.py
tests/router/: test_router.py
