[build-system]
requires = ["hatchling==1.29.0", "hatch-fancy-pypi-readme==25.1.0"]
build-backend = "hatchling.build"

[project]
name = "cb-events"
version = "8.0.9"
description = "Async Python client for the Chaturbate Events API."
authors = [{ name = "MountainGod2", email = "admin@reid.ca" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.5",
    "aiolimiter>=1.2.1",
    "pydantic>=2.13.4",
    "stamina>=26.1.0",
    "typing-extensions>=4.15.0",
]
dynamic = ["readme"]
keywords = ["chaturbate", "events", "api", "async", "streaming", "real-time", "webcam", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MountainGod2/cb-events"
Documentation = "https://cb-events.readthedocs.io/latest/"
Repository = "https://github.com/MountainGod2/cb-events.git"
Changelog = "https://github.com/MountainGod2/cb-events/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/MountainGod2/cb-events/issues"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = [
    "basedpyright==1.39.3",
    "pre-commit==4.6.0",
    "pylint==4.0.5",
    "pylint-pydantic==0.4.1",
    "ruff==0.15.12",
    "xenon==0.9.3",
]
test = [
    "aioresponses==0.7.8",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-aiohttp==1.1.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
]
docs = [
    "furo==2025.12.19",
    "myst-parser==5.0.0",
    "sphinx==9.1.0",
    "sphinx-autoapi==3.8.0",
    "sphinx-copybutton==0.5.2",
]
security = ["bandit[sarif]==1.9.4", "pip-audit==2.10.0", "zizmor==1.24.1"]
build = ["python-semantic-release==10.5.3"]
examples = ["python-dotenv >=1.2.2"]

[tool.uv]
required-version = ">=0.11.8"
compile-bytecode = true
environments = ["python_version >= '3.10'"]
fork-strategy = "requires-python"
default-groups = []
exclude-newer = "1 week"
# Exclude our package from newer checks to update examples immediately
exclude-newer-package = { "cb-events" = false , "gitpython" = false }
# Mitigate security vulnerabilities without needing to wait for upstream package updates
constraint-dependencies = ["gitpython >= 3.1.50"]

[tool.uv.dependency-groups]
docs = { requires-python = ">=3.12" }

[tool.hatch]
build.targets.wheel.packages = ["src/cb_events"]
metadata.hooks.fancy-pypi-readme.content-type = "text/markdown"
metadata.hooks.fancy-pypi-readme.fragments = [{ path = "README.md" }]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Replace relative links with absolute links to repository
pattern = '\[(.+?)\]\(((?!https?://)\.?/?(\S+?))\)'
replacement = '[\1](https://github.com/MountainGod2/cb-events/tree/main/\g<3>)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Remove `> [!NOTE]` admonitions since PyPI doesn't support them
pattern = '> \[![A-Z]+\][^\n]*\n'
replacement = ''

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_parser = "conventional"
commit_author = "MountainGod2 <admin@reid.ca>"
changelog_file = "CHANGELOG.md"
output_format = "md"
upload_to_vcs_release = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.ruff]
target-version = "py310"
line-length = 80
indent-width = 4

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812", # Incompatible with ruff formatter
    "CPY001",
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["RUF029", "TC"]
"tests/*" = [
    "ANN",
    "E501",
    "FBT001",
    "PLC2701",
    "PLR0913",
    "PLR0917",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "SLF001",
    "TC",
]
"tests/conftest.py" = ["D"]
"tests/test_router.py" = ["ARG001", "RUF029"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
load-plugins = ["pylint.extensions.typing", "pylint_pydantic"]

[tool.pylint.design]
max-attributes = 12

[tool.pylint.format]
max-line-length = 80

[tool.basedpyright]
include = ["src"]
exclude = ["tests", "examples", "docs", "build", "dist", ".venv"]
extraPaths = ["src"]
pythonVersion = "3.10"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov-report=term-missing:skip-covered",
    "--cov=src",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests requiring external services",
]

[tool.coverage.run]
source = ["src/"]
branch = true
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 0
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
