[project]
name = "cb-events"
version = "9.0.2"
description = "Async Python client for the Chaturbate Events API."
authors = [{ name = "MountainGod2", email = "admin@reid.ca" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.0",
    "aiolimiter>=1.0.0",
    "pydantic>=2.8.0",
    "stamina>=25.2.0",
    "typing-extensions>=4.12.2",
]
dynamic = ["readme"]
keywords = ["chaturbate", "events", "api", "async", "streaming", "real-time", "webcam", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MountainGod2/cb-events"
Documentation = "https://mountaingod2.github.io/cb-events/"
Repository = "https://github.com/MountainGod2/cb-events.git"
Changelog = "https://github.com/MountainGod2/cb-events/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/MountainGod2/cb-events/issues"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = [
    "basedpyright==1.39.6",
    "pre-commit==4.6.0",
    "pylint==4.0.5",
    "pylint-pydantic==0.4.1",
    "ruff==0.15.14",
    "xenon==0.9.3",
]
test = [
    "aioresponses==0.7.8",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0a2",
    "pytest-aiohttp==1.1.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
]
docs = [
    "mdformat-mkdocs==5.1.4",
    "mdformat-frontmatter==2.0.10",
    "mkdocstrings-python==2.0.3",
    "pymdown-extensions==10.21.3",
    "zensical==0.0.43",
]
security = ["bandit[sarif]==1.9.4", "pip-audit==2.10.0", "zizmor==1.25.2"]
build = ["python-semantic-release==10.5.3"]

[build-system]
requires = ["hatchling==1.29.0", "hatch-fancy-pypi-readme==25.1.0"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 week"
required-version = ">=0.11.8"
compile-bytecode = true
environments = ["python_version>='3.10'"]
fork-strategy = "requires-python"
default-groups = []

[tool.hatch.build.targets.wheel]
packages = ["src/cb_events"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Replace relative links with absolute links
pattern = '\[(.+?)\]\(((?!https?://)\.?/?(\S+?))\)'
replacement = '[\1](https://github.com/MountainGod2/cb-events/tree/main/\g<3>)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Remove `> [!NOTE]` admonitions but keep the codeblocks
pattern = '> \[![A-Z]+\][^\n]*\n'
replacement = ''

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Remove the Star History section
pattern = '## Star History\n\n(?:(?!^## )[\s\S])*'
replacement = ''

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_parser = "conventional"
commit_author = "cb-events-release[bot] <283457951+cb-events-release[bot]@users.noreply.github.com>"
changelog_file = "CHANGELOG.md"
output_format = "md"
upload_to_vcs_release = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
mode = "init"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812", # Incompatible with ruff formatter
    "CPY001",
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["RUF029", "TC", "DOC"]
"tests/*" = [
    "ANN",
    "E501",
    "FBT001",
    "PLC2701",
    "PLR0913",
    "PLR0917",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "SLF001",
    "TC",
]
"tests/conftest.py" = ["D"]
"tests/test_router.py" = ["ARG001", "RUF029"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pylint]
max-statements-in-try = 10

[tool.pylint.main]
load-plugins = ["pylint.extensions.typing", "pylint_pydantic"]

[tool.pylint.design]
max-attributes = 14

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1200

[tool.basedpyright]
include = ["src"]
exclude = ["tests", "examples", "docs", "build", "dist", ".venv"]
extraPaths = ["src"]
pythonVersion = "3.10"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-markers", "--strict-config", "--tb=short", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end workflow tests",
    "live: marks tests requiring explicit opt-in live credentials",
]

[tool.coverage.run]
source = ["src/"]
branch = true
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 0
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
